// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheFab matches snapshot 1`] = `
<v-fab-transition-stub
  mode="out-in"
  origin="center center"
>
  <v-btn-stub
    activeclass=""
    color="accent"
    fab="true"
    large="true"
    right="true"
    tag="button"
    type="button"
  >
    <v-icon-stub
      color="white"
    >
      tune
    </v-icon-stub>
  </v-btn-stub>
</v-fab-transition-stub>
`;

exports[`TheFab matches snapshot 2`] = `
<v-fab-transition-stub
  mode="out-in"
  origin="center center"
>
  <v-btn-stub
    activeclass=""
    color="accent"
    exact="true"
    fab="true"
    large="true"
    right="true"
    tag="button"
    to="[object Object]"
    type="button"
  >
    <v-icon-stub
      color="white"
    >
      search
    </v-icon-stub>
  </v-btn-stub>
</v-fab-transition-stub>
`;

exports[`TheFab matches snapshot 3`] = `
<v-fab-transition-stub
  mode="out-in"
  origin="center center"
>
  <v-btn-stub
    activeclass=""
    color="accent"
    fab="true"
    large="true"
    right="true"
    tag="button"
    type="button"
  >
    <v-icon-stub
      color="white"
    >
      sort
    </v-icon-stub>
  </v-btn-stub>
</v-fab-transition-stub>
`;

exports[`TheFab matches snapshot 4`] = `
<v-fab-transition-stub
  mode="out-in"
  origin="center center"
>
  <v-btn-stub
    activeclass=""
    color="accent"
    fab="true"
    large="true"
    right="true"
    tag="button"
    type="button"
  >
    <v-icon-stub
      color="white"
    >
      edit
    </v-icon-stub>
  </v-btn-stub>
</v-fab-transition-stub>
`;
